<?xml version="1.0"?>
<package format="2">
  <name>ros_network_gap</name>
  <version>0.0.0</version>
  <description>
    ROS node to exchange messages bidirectional between ros networks
  </description>

  <maintainer email="mpantic@student.ethz.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>

</package>
